cf_analysis_results/checkerframework_results/url8b434243b7_ondrasej_GPlan_tgz-pJ8-PlanningProblemTestJ8.txt
../../../../datasets/june2020_dataset/url8b434243b7_ondrasej_GPlan_tgz-pJ8-PlanningProblemTestJ8/src/cz/matfyz/sykora/planning/Planner.java:70: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-808 $$ java.io.FileReader $$ possible exceptional exit due to problem.initialize(new FileReader(file)) with exception type java.io.IOException $$ ( 2211, 2231 ) $$ @MustCall method close may not have been invoked on temp-var-808 or any of its aliases.
			problem.initialize(new FileReader(file));
			                   ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to problem.initialize(new FileReader(file)) with exception type java.io.IOException
1 error
